# laravel.pv113.com/app/Models/User.php
@@ -21,6 +21,8 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'phone',
+        'image'
     ];
 
     /**
@@ -55,7 +57,9 @@ class User extends Authenticatable implements JWTSubject
     {
         return [
             "email" => $this->email,
-            "name" => $this->name
+            "name" => $this->name,
+            "image" => $this->image,
+            "verified" => $this->email_verified_at
         ];
     }
 }
