# laravel.pv113.com/routes/api.php
@@ -19,3 +19,6 @@ Route::post("/categories/edit/{id}", [CategoriesController::class, "edit"]);
 Route::post('/send/email', [SenderController::class, 'send_email']);
 
 Route::post('/login', [AuthController::class, 'login']);
+Route::post('/login/google', [AuthController::class, 'loginGoogle']);
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/verification', [AuthController::class, 'verificationEmail']);
